# MethaneRadiolysis

./: LICENSE  README.md  create_data.py  cross_section.py  monte_carlo.py  probabilities.py  pyproject.toml  run_simulation.py  sensitivityanalysis.py
Events/: EIE.py  Electron_Attachment.py  Ionization.py  Molecular_Excitation.py  Photon_Emission.py
results/: 100keV_10000_generational_results.xlsx  100keV_10000_simulations_results.xlsx
scripts/: main.py  main_generation.py  run_simulation.py
src/monte_carlo_sim/: __main__.py  main.py
src/monte_carlo_sim/events/: eie.py  electron_attachment.py  ionization.py  molecular_excitation.py  photon_emission.py
src/monte_carlo_sim/file_writing/: file_writing.py
src/monte_carlo_sim/plotting/: convergence.py
src/monte_carlo_sim/simulation/: constants.py  cross_section.py  run_simulation.py
